--- a/sd19301sof3022/src/main/resources/templates/buoi2/thong-tin.html
+++ b/sd19301sof3022/src/main/resources/templates/buoi2/thong-tin.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    Username: <span th:text="${user}"></span> <br>
+    Username: <span th:text="${username}"></span> <br>
     Password: <span th:text="${pass}"></span> <br>
     Remember: <span th:text="${remember} ? 'Co nho' : 'Khong nho'"></span>
 </body>
