--- a/sd19308sof3022/src/main/resources/templates/phongKham/hien-thi.html
+++ b/sd19308sof3022/src/main/resources/templates/phongKham/hien-thi.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+  Them phong kham: <br>
+  <form action="/phong-kham2/add" method="post">
+    Ten: <input type="text" name="ten"> <br>
+    Dia chi: <input type="text" name="diaChi"> <br>
+    <button>Submit</button>
+  </form>
   Bang thong tin:
   <table>
     <thead>
