--- a/sd19301sof3022/src/main/resources/templates/phongKham/hien-thi.html
+++ b/sd19301sof3022/src/main/resources/templates/phongKham/hien-thi.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    Them phong kham: <br>
+    <form action="/phong-kham2/add" method="post">
+        Ten: <input type="text" name="ten"> <br>
+        Dia chi: <input type="text" name="diaChi"> <br>
+        <button>Submit</button>
+    </form>
+    <br>
     Thong tin bang:
     <table>
         <thead>
@@ -25,9 +32,9 @@
                 <td th:text="${phongKham.ten}"></td>
                 <td th:text="${phongKham.diaChi}"></td>
                 <td>
-                    <a th:href="@{|/phong-kham/detail/${phongKham.id}|}">Detail</a>
-                    <a th:href="@{|/phong-kham/delete?id=${phongKham.id}|}">Delete</a>
-                    <a th:href="@{|/phong-kham/update/${phongKham.id}|}">Update</a>
+                    <a th:href="@{|/phong-kham2/detail/${phongKham.id}|}">Detail</a>
+                    <a th:href="@{|/phong-kham2/delete?id=${phongKham.id}|}">Delete</a>
+                    <a th:href="@{|/phong-kham2/view-update/${phongKham.id}|}">Update</a>
                 </td>
             </tr>
         </th:block>
