--- a/sd19308sof3022/src/main/resources/templates/bacSi/hien-thi.html
+++ b/sd19308sof3022/src/main/resources/templates/bacSi/hien-thi.html
@@ -6,18 +6,26 @@
 </head>
 <body>
     Them bac si: <br>
-    <form action="/bac-si/add" method="post">
-        Ten: <input type="text" name="ten"> <br>
-        Luong: <input type="text" name="luong"> <br>
+    <form th:object="${bacSi}" action="/bac-si/add" method="post">
+        Ten: <input type="text" th:field="*{ten}">
+            <span style="color: red" th:errors="*{ten}"></span>
+        <br>
+        Luong: <input type="text" th:field="*{luong}">
+            <span style="color: red" th:errors="*{luong}"></span>
+        <br>
         Gioi tinh:
-            Nam <input type="radio" name="gioiTinh" value="false">
-            Nu <input type="radio" name="gioiTinh" value="true"> <br>
+            Nam <input type="radio" name="gioiTinh" value="false" th:field="*{gioiTinh}">
+            Nu <input type="radio" name="gioiTinh" value="true" th:field="*{gioiTinh}">
+            <span style="color: red" th:errors="*{gioiTinh}"></span>
+        <br>
         Phong Kham:
             <select name="phongKham">
+                <option value="">Vui long chon phong kham</option>
                 <option th:each="phongKham : ${listPhongKham}"
                         th:value="${phongKham.id}" th:text="${phongKham.ten}">
                 </option>
             </select>
+            <span style="color: red" th:errors="*{phongKham}"></span>
         <br>
         <button>Submit</button>
     </form>
